# saebooks

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CHARTER.md  CLA.md  CONTRIBUTING.md  DEFERRED.md  Dockerfile  Dockerfile.broker  Dockerfile.capture  Dockerfile.preaccounting  Dockerfile.test  Dockerfile.test.dockerignore  LICENSING.md  Makefile  README.md  SECURITY.md  SELFHOST.md  SPEC-LICENSING.md  TRADEMARK.md  alembic_reference.ini  docker-compose.community.yml  docker-compose.sandbox.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  payday-super-commit-msg.txt  pyproject.toml
.github/workflows/: build-images.yml  test.yml
alembic/: env.py
alembic/versions/: 0001_settings.py  0002_companies.py  0003_accounts.py  0004_tax_codes.py  0005_journal_entries.py  0006_journal_templates.py  0007_bank_statement_lines.py  0008_account_ranges.py  0009_gst_system_accounts.py  0010_hyphenated_account_codes.py  0011_audit_snapshots.py  0012_sub_header_accounts.py  0013_contacts.py  0014_bank_rules.py  0015_sql_queries.py  0016_bank_feed_connections.py  0017_fixed_asset_register.py  0018_document_counters.py  0019_invoices.py  0020_payments_credit_notes.py  0021_recurring_invoices.py  0022_bills.py  0023_bill_allocations.py  0024_aba_bank_details.py  0025_user_roles.py  0026_projects_budgets.py  0027_foreign_currency.py  0028_inventory.py  0029_user_preferred_theme.py  0030_asset_register_v2_dv.py  0031_asset_partial_disposal.py  0032_asset_tax_model.py  0033_permissions.py  0034_company_siss_creds.py  0035_ato_sbr_config.py  0036_phase0_api_scaffolding.py  0037_phase1_version_columns.py  0038_phase1_user_version.py  0039_phase1_item_version.py  0040_tenants.py  (+197 more)
alembic_reference/: env.py
alembic_reference/versions/: 0001_initial_reference_schema.py  0002_jurisdiction_hierarchy.py  0003_entity_structure_types.py  0004_payroll_canonical_tables.py  0005_ref_tax_code_tax_family.py  0006_duty_concessions.py  0007_income_corp_cap_bik.py  0008_retire_vehicle_contrib.py  0009_box_formula_column.py  0010_social_tax_floor.py  0011_oss_member_state_rates.py  0012_bik_amount_per_unit.py  0012_reference_rename_sweep.py  0013_coa_statutory_frameworks.py  0014_income_tax_reference.py  0015_duty_domain_gaps.py  0016_merge_ref_heads.py  0017_subjuris_fk_promotion.py  0018_merge_ref_heads.py  0019_holiday_calendar_scope.py
capture_app/: __init__.py  __main__.py  deps.py  main.py  worker.py
capture_app/routers/: __init__.py  ai_extraction.py  bank_feeds.py  imports.py
cli/: Dockerfile  Makefile  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  main.go
cli/cmd/: auth.go  bill.go  customer.go  invoice.go  je.go  payment.go  root.go  vendor.go
cli/proto/: saebooks.proto
db/: cashbook.schema.sql
deploy/: cron-inbox.template  cron-sync-feeds.template
deploy/community/: .env.example  README.md  docker-compose.yml
deploy/saebooks-group/: .env.example  README.md  docker-compose.yml
deploy/sap/: .env.example  README.md  docker-compose.yml
deploy/windows-server/: README.md
docker/test-initdb/: 01-test-roles.sql  02-reference-db.sql
docs/: cashbook-edition-design.md  cashbook-gate-1-category-signoff.md  db-role-split.md  grpc-web.md  kmd-2027-scope.md  multi-jurisdiction.md  payday-super-phase1-blockers.md  webauthn.md
docs/contracts/: feeds-server.md  license-server.md  lodge-server.md
docs/design/: apply-credit-to-invoice.md  audit-log-coverage.md  cashbook-tax-code-mapping.md  scheduled-backups-liability-boundary.md
docs/legal/: README.md  privacy-policy.md  terms-of-service.md
docs/operations/: module-delegation-activation.md  rls-flip.md
docs/security/: accountant-principal.md  credential-rotation-runbook.md  hosting-residency-attestation.md  incident-response.md  key-management-plan.md  osf-control-mapping.md
docs/sync/: xero.md
graphify-out/: .graphify_labels.json  .graphify_root  GRAPH_REPORT.md  index.html  manifest.json  saebooks-api.metrics.json
graphify-out/cache/: stat-index.json
grpcwebproxy/: Dockerfile  README.md
installers/oneclick/: .gitignore  INSTALL.md  build-linux.sh  build-macos.sh  build-windows.ps1  launcher.py  saebooks-oneclick.spec  verify_oneclick.py
latex-api/: Dockerfile  app.py
mcp/: .env.example  Dockerfile  README.md  docker-compose.yml  server.py
mcp-community/: .gitignore  docker-compose.yml
mcp/scripts/: saebooks-token-drift-check.sh  saebooks-token-sync  with-saebooks-env
ops/systemd/: saebooks-backup.service  saebooks-backup.timer  saebooks-restore-test.service  saebooks-restore-test.timer
preaccounting_app/: __init__.py  __main__.py  deps.py  main.py
preaccounting_app/routers/: __init__.py  purchase_orders.py  quotes.py  time_entries.py
saebooks/: __init__.py  cli.py  config.py  connect_app.py  db.py  db_types.py  grpc_server.py  main.py  money.py  web.py
saebooks/api/: __init__.py  errors.py
saebooks_group/: __init__.py  alembic.ini  app.py  config.py  db.py  models.py
scripts/: backup.sh  bump-version.sh  dump_cashbook_schema.py  poc_contacts_qt.py  regen_proto.sh  restore-test.sh  run-tests.sh
tests/: KNOWN_FAILURES.txt  TESTING.md  conftest.py  test_0185_vocab_migration.py  test_0186_audit_snapshots_backfill.py  test_2026_05_25_void_route_regression.py  test_aba.py  test_accounts_page.py  test_active_company_compat.py  test_aged_ap.py  test_aged_ar.py  test_aged_ar_point_in_time.py  test_assets.py  test_assets_dv.py  test_assets_import.py  test_assets_page.py  test_assets_partial_disposal.py  test_assets_v2_gate.py  test_audit_export.py  test_bank_feeds_credentials_page.py  test_bank_feeds_page.py  test_beneficiaries.py  test_bills.py  test_bills_page.py  test_broker_money_free.py  test_broker_relay_forward.py  test_budget_vs_actual.py  test_cashbook_bank_constraint.py  test_cashbook_strict_subset.py  test_cashflow_forecast.py  test_classic_theme.py  test_classic_theme_rr2.py  test_cli.py  test_close_year_admin_gate.py  test_cloud_theme.py  test_companies_ui.py  test_company_export.py  test_company_nfp_attributes.py  test_contact_industry_code.py  test_contacts_abr_page.py  (+106 more)
(+1279 files in other folders)
