[project]
name = "saebooks"
version = "0.2"
description = "Self-hosted double-entry accounting for small-to-medium businesses"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Richard Sauer", email = "richard@sauer.com.au" }]
dependencies = [
    "fastapi>=0.115",
    "starlette>=1.0.1",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "jinja2>=3.1",
    "python-multipart>=0.0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "aiosmtplib>=3.0",
    "prometheus-client>=0.21",
    "sentry-sdk[fastapi]>=2.18",
    "python-json-logger>=2.0",
    "cryptography>=43.0",
    "lxml>=5.0",  # SBR/XBRL Activity-Statement document generation
    "bcrypt>=4.2",
    "connecpy>=2.3",
    "grpcio>=1.62",
    "grpcio-tools>=1.62",
    "openai>=1.0",
    "webauthn>=2.0",
    "pyyaml>=6.0",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "hypothesis>=6.112",
    "ruff>=0.7",
    "mypy>=1.13",
    "respx>=0.22",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["saebooks*"]

[tool.setuptools.package-data]
saebooks = ["templates/**/*.html", "static/**/*", "seed/au/*.csv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "postgres_only: test exercises Postgres-only features (RLS, JSONB operators, pg_roles, set_config). Skipped when DATABASE_URL is a SQLite URL.",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# Generated / vendored / historical code is not hand-maintained, so it is
# not linted: alembic/versions are immutable historical migrations,
# saebooks/grpc_gen + saebooks/proto are protoc/connecpy output regenerated
# at image-build time, graphify-out/grpcwebproxy are vendored artefacts.
extend-exclude = [
    "alembic/versions",
    "saebooks/grpc_gen",
    "saebooks/proto",
    "graphify-out",
    "grpcwebproxy",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# E501  line length is handled by the formatter, not the linter.
# RUF001/002/003 flag Unicode look-alike punctuation (en-dashes, curly
# quotes) in identifiers / strings / docstrings. Our prose, CSV seed data
# and human-facing copy intentionally use them, so these are noise here.
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI/Starlette dependency-injection markers are evaluated once at
# import time and are safe as argument defaults — the canonical B008
# exemption for FastAPI apps.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Header",
    "fastapi.Path",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Body",
    "fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
# Test modules legitimately use patterns the core engine must not:
#   E402   imports placed after a sys.path / skip-guard preamble or after
#          fixtures are defined in long isolation harnesses;
#   E741   single-letter loop vars (l = line) in tight assertion loops;
#   RUF043 pytest.raises(match=...) patterns that contain regex
#          metacharacters but are intended as literal substrings;
#   RUF012 ClassVar-style mutable defaults on throwaway test helper classes;
#   SIM115 open() without a context manager in a one-shot source-read assert.
"tests/**" = ["E402", "E741", "RUF043", "RUF012", "SIM115"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = []
exclude = ["alembic/versions/"]
